{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "GameAM",
            "id": "5b3186db-00f4-451e-8627-520756eec1b2",
            "actions": [
                {
                    "name": "SpawnObject",
                    "type": "Button",
                    "id": "3b00b42e-31a0-4a09-bcce-8b3726463952",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetCarTransform",
                    "type": "Button",
                    "id": "76913a35-28b2-47f8-bfd8-8b8faba3122c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dfecffb1-5cc3-4c20-8b37-e3767ebc369e",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b865eddd-e17a-48b7-911c-72a7d7e47e10",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e52abf2-fd5a-4a74-a5a0-f6b6025fdb84",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6da2af26-df62-4d0d-aa71-4f7f7960166b",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetCarTransform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c1117bc-a1e9-4ed1-bb10-9c88440f1cff",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetCarTransform",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Stopwatch",
            "id": "f45bbaeb-3356-4555-a09c-c58a1c17332e",
            "actions": [
                {
                    "name": "IncrementTime",
                    "type": "Button",
                    "id": "7350ac81-da73-4cd3-a8d8-2e58062ff18d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecrementTime",
                    "type": "Button",
                    "id": "b8cd7262-62fb-4872-afd8-b7a1e9302b62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleDestinationTimeSetup",
                    "type": "Button",
                    "id": "01f1a864-2a06-454a-8cfd-00f90fb4fec8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeBackgroundMusic",
                    "type": "Button",
                    "id": "b83b99e2-a0cd-4500-93b4-e71e7992d0bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e39bcca2-8dfa-4a59-b940-9599e58d4f4c",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncrementTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93fc5487-19fe-4665-a532-58f57277f989",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncrementTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05666e20-a2ee-405b-beec-f0407f330067",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecrementTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1b8ce20-1127-4a61-b28c-ed6fd5f81508",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecrementTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21888c48-8d49-4b1f-b52f-50917c661b45",
                    "path": "<XRController>{LeftHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDestinationTimeSetup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb6540ca-6ce1-4a25-8801-a584f077fe62",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDestinationTimeSetup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ae810b8-c620-4cf4-8212-a4a6a63ada23",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDestinationTimeSetup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d727c904-02ad-462e-838c-74fffb654d6c",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeBackgroundMusic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8011fc9-74f1-4369-a1ea-a5aa6fd763e3",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeBackgroundMusic",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LobbyTutorialAM",
            "id": "fa033576-3ab9-4133-a53d-93d37ec13ec3",
            "actions": [
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "7d236cdb-9bfc-4e16-8d56-3362c3db5888",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "869ddb86-b617-4a7a-bdae-f425084c29e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e7acf2da-cc87-4d76-aedf-66cf6b328a06",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4814df66-a84f-4ccd-a317-de708cc21a34",
                    "path": "<OculusTouchController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}